# Assisi

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  LICENSE.txt  Makefile  README.md  compile_commands.json  conanfile.txt  setup.ps1  setup.sh
apps/sandbox/: CMakeLists.txt
apps/sandbox/src/: main.cpp
assets/: game.json
assets/levels/: Test.alvl
assets/shaders/: cluster_build.comp  cluster_cull.comp  fxaa.frag  mesh.frag  mesh.vert  screen.vert
assets/shaders/basic/: basic.fs  basic.vs
cmake/: AssisiModule.cmake  AssisiOptions.cmake  AssisiReflect.cmake  Deps.cmake
modules/App/: CMakeLists.txt
modules/App/include/Assisi/App/: AppConfig.hpp  Application.hpp  GameApplication.hpp  OptionsConfig.hpp  SystemRegistry.hpp
modules/App/src/: AppConfig.cpp  Application.cpp  GameApplication.cpp  OptionsConfig.cpp  SystemRegistry.cpp
modules/Core/: CMakeLists.txt
modules/Core/include/Assisi/: Prelude.hpp  ShortNames.hpp
modules/Core/include/Assisi/Core/: AssetSystem.hpp  Errors.hpp  EventQueue.hpp  Logger.hpp  Sinks.hpp
modules/Core/include/Assisi/Core/Reflect/: Annotations.hpp  ComponentMeta.hpp  ComponentRegistry.hpp  FieldMeta.hpp
modules/Core/src/: AssetSystem.cpp  ComponentRegistry.cpp  EventQueue.cpp  Logger.cpp  Sinks.cpp
modules/Debug/: CMakeLists.txt
modules/Debug/include/Assisi/Debug/: DebugUI.hpp
modules/Debug/src/: DebugUI.cpp
modules/ECS/: CMakeLists.txt
modules/ECS/include/Assisi/ECS/: ECS.hpp  Entity.hpp  Query.hpp  Registry.hpp  Scene.hpp  SceneRegistry.hpp  SparseSet.hpp
modules/ECS/src/: ECS.cpp  Registry.cpp  SceneRegistry.cpp
modules/Game/: CMakeLists.txt
modules/Game/include/Assisi/Game/: DefaultWorldObjects.hpp  SpawnSystem.hpp  Transform.hpp
modules/Math/: CMakeLists.txt
modules/Math/include/Assisi/Math/: GLM.hpp  GLMConfig.hpp
modules/Physics/: CMakeLists.txt
modules/Physics/include/Assisi/Physics/: PhysicsComponents.hpp  PhysicsWorld.hpp
modules/Physics/src/: PhysicsWorld.cpp
modules/Render/: CMakeLists.txt
modules/Render/include/Assisi/Render/: ClusterGrid.hpp  ComputeShader.hpp  DefaultMeshes.hpp  DefaultResources.hpp  MeshData.hpp  RenderSystem.hpp  Shader.hpp
modules/Render/include/Assisi/Render/Backend/: GraphicsBackend.hpp
modules/Render/include/Assisi/Render/OpenGL/: DefaultTextures.hpp  Framebuffer.hpp  MeshBuffer.hpp  ScreenQuad.hpp  Texture2D.hpp
modules/Render/src/: ClusterGrid.cpp  DefaultResources.cpp  RenderSystemOpenGL.cpp  Texture2D.cpp
modules/Runtime/: CMakeLists.txt
modules/Runtime/include/Assisi/Runtime/: Camera.hpp  Components.hpp  Hierarchy.hpp  Lifecycle.hpp  LightComponents.hpp  LightingSystem.hpp  Renderer.hpp  SceneSerializer.hpp  SpawnSystem.hpp  Transform.hpp  WorldObject.hpp
modules/Runtime/src/: Camera.cpp  Hierarchy.cpp  LightingSystem.cpp  Renderer.cpp  SceneSerializer.cpp  SpawnSystem.cpp
modules/Scene/: CMakeLists.txt
modules/Scene/include/Assisi/Scene/: Camera.hpp  DefaultWorldObjects.hpp  SpawnSystem.hpp  Transform.hpp  WorldObject.hpp
modules/Scene/src/: SpawnSystem.cpp
modules/Window/: CMakeLists.txt
modules/Window/include/Assisi/Window/: ActionMap.hpp  GlfwLibrary.hpp  InputContext.hpp  Key.hpp  Window.hpp  WindowContext.hpp
modules/Window/src/: ActionMap.cpp  GlfwLibrary.cpp  InputContext.cpp  Window.cpp  WindowContext.cpp
modules/core/: CMakeLists.txt
modules/core/include/assisi/core/: core.hpp
modules/core/src/: core.cpp
profiles/: clang-debug  clang-release  clang-sanitize  gcc-release  gcc-sanitize  msvc-debug  msvc-release  msvc-sanitize
tools/reflectgen/: reflectgen.py
